test/files/neg/choices.scala
//> using options -Yresolve-term-conflict
//
object Test {
  def main(args: Array[String]): Unit = {

  }
}
